--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -13,7 +13,7 @@ p {
 }
 
 .num4 {
-    background-color: green;
+    background-color: lightgreen;
     font-size: 24px;
     font-weight: bold;
 }
