--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -9,11 +12,18 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  flex: none;
+  padding: 8px 32px;
+  margin: 8px;
+  
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;       
 }
 
 a {
@@ -22,4 +32,7 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  flex: auto;
+  margin: 4px;
+  flex-direction: row;
 }
