--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -20,6 +23,9 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  flex-direction: initial;
+  margin: 8px;
+  
 }
 
 .logo {
@@ -27,6 +33,8 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  text-align: center;
+
 }
 
 button {
@@ -35,14 +43,24 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin: 16px;
+  text-align: center;
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  flex: auto;
 }
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 16px;
+  flex: auto;
+  justify-content: left;
+  align-items: center;
 }
