--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,38 +1,15 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  display: flex;
-  
-
 }
 
 img {
   width: 100px;
   height: 100px;
-  flex-direction: column;
-  margin: 52px;
-  text-align: center;
-  align-items: center;
-
-}
-
-.things {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex: auto;
-  margin: auto;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
-  text-align: center;
-  flex: auto;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
 }
 
 /* do not edit this footer */
@@ -46,5 +23,23 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
-  flex: auto;
+}
+
+
+body {
+  text-align: center;
+}
+
+.title {
+  margin-bottom: 32px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.info {
+  max-width: 200px;
 }
