--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,25 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+
+}
+
+div {
+  display: flex;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+  font-family: Roboto, sans-serif;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+
 }
 
 img {
@@ -23,4 +42,64 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+
+.left-links {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: left;
+
+}
+
+.right-links {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: right;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: auto;
+  padding-bottom: auto;
+  background-color: #eee;
+}
+
+.content {
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: auto;
+  padding-bottom: auto;
+  background-color: #eee;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  padding: 16px;
+  
+}
+
+button {
+  padding: 8px 16px;
 }
